Fix a huge slowdown with mesh transform added as a transform mask

The Mesh Transform used to have very rough approximations for needRect
and changeRect functions (basically, all touched patches were dragged
into the changeRect). It caused each update thread to update the whole
image, instead of its own part of it (which was slow).

The patch introduces a better approximation of need/changeRects using
a binary search in the param space followed by random rect sampling.

BUG:458475